SERVER-56883 Fix db.collection.stats() error on mongos when calling on timeseries collection

(cherry picked from commit c09e27d0ea8b535a3a766924c141116c801f641a)